# scale-compositionality

./: .gitignore  README.md  pyproject.toml  run.py
compscale/: callbacks.py  config_classes.py  experiment.py  logging.py  loss.py
compscale/data/: base.py  imitation.py  imitation_test.py  teacher.py  teacher_test.py  utils.py
compscale/data/envs/: base.py  grid.py  preference.py
compscale/model/: fsdp.py  hypernetwork.py  hypernetwork_test.py  policy.py  regression.py  rotary.py  transformer.py
configs/: goal.py  preference.py  teacher.py
sweeps/: scaling-data_hyperteacher.yaml  scaling-data_preference.yaml  scaling-law_hyperteacher.yaml  scaling-law_preference.yaml  scaling-model_hyperteacher.yaml  scaling-model_preference.yaml  task-support_hyperteacher.yaml  task-support_preference.yaml
