[project]
name = "compscale"
version = "0.1.0"
description = "Official code for the paper 'Scale leads to compositional generalization'"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chex>=0.1.88",
    "einops>=0.8.0",
    "flax>=0.10.2",
    "jax[cuda12]>=0.4.37",
    "jaxtyping>=0.2.36",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "ruff>=0.9.3",
    "sentencepiece>=0.2.0",
    "wandb>=0.19.1",
]

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    #"ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
ignore = ["F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true

[tool.pytype]
inputs = ['compscale']

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]
